--- a/TODO.txt
+++ b/TODO.txt
@@ -1,6 +1,7 @@
 -lots of draw conditions (50-move rule,threefold repitition, offer,...)
--en passant
+-en passant(started implementing)
 -pawn promotion
 -load and save pgn to file
+-option to quit game or request draw
 
 -AIIIIIIII
